Added navigation links to left nav menu and created components to them. Fixed duplicated css class names.

--- a/src/components/UI/button/Button.css
+++ b/src/components/UI/button/Button.css
@@ -24,11 +24,11 @@
     cursor: not-allowed;
 }
 
-.wrong {
+.Button.wrong {
     background: rgba(240, 87, 108, 1);
 }
 
-.correct {
+.Button.correct {
     background: rgba(161, 240, 69, 1);
 }
 
